<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".CreateUserActivity">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/etPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ems="10"
        android:hint="@string/hintPsw"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/btn_rounded_solid_claro"
        android:text="@string/btnRegisterCreateUser"
        android:textColor="#2D2D30"
        android:textSize="20sp" />

</LinearLayout>