<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ems="10"
        android:hint="@string/hintPsw"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/btnLogin"
        android:textColor="@color/textBtnOscuro"
        android:textSize="20sp" />
</androidx.appcompat.widget.LinearLayoutCompat>