<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    tools:context=".SaveActivity">


    <TextView
        android:id="@+id/tvNameMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="25sp"
        android:paddingTop="15sp"
        android:paddingEnd="25sp"
        android:paddingBottom="15sp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />



    <EditText
        android:id="@+id/etDias"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:hint="@string/d_as"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/textBtnClaro"
        android:textColorHint="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.397" />

    <EditText
        android:id="@+id/etHoras"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:hint="@string/horas"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/textBtnClaro"
        android:textColorHint="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/etInicio"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:focusable="false"
        android:hint="@string/inicio"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/textBtnClaro"
        android:textColorHint="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/etDiaInicio"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:focusable="false"
        android:hint="@string/fecha"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/textBtnClaro"
        android:textColorHint="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/a_adir"
        android:textColor="@color/textBtnOscuro"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDias" />

    <TextView
        android:id="@+id/tvDias"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/d_as_tratamiento"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.39999998" />

    <TextView
        android:id="@+id/tvHoras"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/periodo_horas"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tvInicio"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_inicio"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/tvDiaInicio"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/fecha_inicio"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameMed"
        app:layout_constraintVertical_bias="0.100000024" />


</androidx.constraintlayout.widget.ConstraintLayout>