<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbf6f0"
    android:orientation="vertical"
    android:id="@+id/contenedor">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="25sp"
        app:srcCompat="@drawable/pill_38165" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/nombreApp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_rounded_trasparent"
        android:drawableStart="@drawable/ic_baseline_assignment_ind_24"
        android:paddingStart="18dp"
        android:text="@string/btnRegisterInicial"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_rounded_solid_dark"
        android:drawableStart="@drawable/ic_baseline_how_to_reg_24"
        android:paddingStart="18dp"
        android:text="@string/btnLogin"
        android:textAlignment="textStart"
        android:textColor="#DADAD6"
        android:textSize="20sp" />

</LinearLayout>