<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".DetailsActivity">


    <TextView
        android:id="@+id/tvNombreMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvFechaInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvHoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp" />




    <Button
        android:id="@+id/btnUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_rounded_solid_dark"
        android:text="@string/consultar_prospecto"
        android:textColor="@color/textBtnOscuro"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnTratamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorPrimary"
        android:text="@string/establecer_tratamiento_de_nuevo"
        android:textColor="@color/textBtnOscuro"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnDeleteMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/borrar_medicamento"
        android:textColor="@color/textBtnOscuro"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_rounded_solid_claro"
        android:text="@string/volver_a_mi_lista"
        android:textColor="@color/textBtnClaro"
        android:textSize="20sp" />

</LinearLayout>